# ComfyUI-SRT-subtitles-VoxCPM

./: README-zh.md  README.md  __init__.py  pyproject.toml  requirements.txt  srt_to_speech_nodes.py
assets/: Mr.Ma.flac
voxcpm/: core.py  zipenhancer.py
voxcpm/model/: voxcpm.py
workflows/: SRT_VoxCPM.json  SRT_VoxCPM_edit.json  SRT_VoxCPM_transfer.json
