[project]
name = "srt-subtitles-voxcpm"
description = "ComfyUI nodes for generating and editing speech from SRT subtitle files using VoxCPM text-to-speech model, supporting multi-speaker dialogue and audio replacement workflows."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["addict", "bitsandbytes", "diffusers", "einops", "huggingface_hub", "inflect", "librosa", "pydantic", "pydub", "simplejson", "sortedcontainers", "soundfile", "safetensors", "torch>=2.5.0", "torchaudio>=2.5.0", "transformers>=4.36.2", "tqdm", "wetext"]

[project.urls]
Repository = "https://github.com/judian17/ComfyUI-SRT-subtitles-VoxCPM"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/judian17/ComfyUI-SRT-subtitles-VoxCPM/wiki"
"Bug Tracker" = "https://github.com/judian17/ComfyUI-SRT-subtitles-VoxCPM/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SRT-subtitles-VoxCPM"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

